# Adrika_app

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  Makefile  README.md  adr_dev.db  adr_dev.db.bak.20260407184112  adr_dev_verify.db  alembic.ini  pyproject.toml
backend/adr_platform_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/alembic/: env.py
backend/alembic/versions/: 202604070001_initial_phase1.py  202604070002_teacher_batch_assignments.py  202604070003_parent_phase4.py  202604080001_registration_onboarding.py  202604100001_fee_module_bridge.py  202604100002_fee_structure_fresh.py  202604100003_student_fee_assignments.py  202604100004_notice_attachments.py  202604110001_homework_delivery_upgrade.py  202604110002_homework_submissions.py  202604110003_assessment_scheduler_upgrade.py  202604110004_subject_academic_scopes.py  202604120001_doubt_chat_lecture_flow.py  202604130001_lecture_schedule_admin_flow.py  202604130002_teacher_teaching_scope.py  202604190001_notification_realtime.py  202604200001_admin_enquiry_intake.py  202604200002_enquiry_status_timeline.py  202604200003_syllabus_completion_hours.py  202604200004_banner_active_toggle.py  202604220001_suggestion_box_chat.py  202605030001_enquiry_conversion_fee_flow.py  (+5 more)
backend/app/: __init__.py  main.py
backend/tests/: conftest.py  test_admin.py  test_assessments.py  test_auth.py  test_doubt_chat.py  test_notices.py  test_notification_realtime.py  test_parents.py  test_registration.py  test_student_content.py  test_suggestions.py  test_teachers.py
(+260 files in other folders)
