[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adr-platform-backend"
version = "0.1.0"
description = "FastAPI backend for coaching institute platform"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "sqlalchemy>=2.0.32,<3.0.0",
  "asyncpg>=0.29.0,<1.0.0",
  "aiosqlite>=0.20.0,<1.0.0",
  "alembic>=1.13.2,<2.0.0",
  "pydantic>=2.8.0,<3.0.0",
  "pydantic-settings>=2.4.0,<3.0.0",
  "python-jose[cryptography]>=3.3.0,<4.0.0",
  "passlib[bcrypt]>=1.7.4,<2.0.0",
  "bcrypt>=4.0.1,<5.0.0",
  "python-multipart>=0.0.9,<1.0.0",
  "redis[hiredis]>=5.0.8,<6.0.0",
  "celery>=5.4.0,<6.0.0",
  "structlog>=24.4.0,<25.0.0",
  "orjson>=3.10.7,<4.0.0",
  "httpx>=0.27.0,<1.0.0",
  "tenacity>=9.0.0,<10.0.0",
  "email-validator>=2.2.0,<3.0.0",
  "Pillow>=10.4.0,<12.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0.0",
  "pytest-asyncio>=0.23.8,<1.0.0",
  "pytest-cov>=5.0.0,<6.0.0",
  "httpx>=0.27.0,<1.0.0",
  "ruff>=0.6.2,<1.0.0",
  "mypy>=1.11.1,<2.0.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
